# pdfree

./: .gitignore  LICENSE  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-ui/: index.html
