[package]
name = "pdf-unlocker"
version = "0.1.0"
description = "A simple Mac app to remove passwords from PDFs"
authors = ["you"]
license = ""
repository = ""
default-run = "pdf-unlocker"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = ["shell-open"] }
core-foundation = "0.9"

[features]
custom-protocol = ["tauri/custom-protocol"]
